--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/14/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">59.0&#176;F</td>
+        <td class="data">59.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">59.0&#176;F</td>
+        <td class="data">59.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">59.0&#176;F</td>
+        <td class="data">59.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.7&#176;F</td>
+        <td class="data">49.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">66%</td>
+        <td class="data">70%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.938 inHg (0.037)</td>
+        <td class="data">29.935 inHg (0.029)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:43:21 AM</td>
+          <td class="data">06:44:06 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:14:40 PM</td>
+          <td class="data">07:13:12 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:52:32 PM">
-            90.0</span><br/>
-          <span title="07:29:11 AM">
-            48.7</span>
+          <span title="12:00:01 AM">
+            59.1</span><br/>
+          <span title="12:00:10 AM">
+            59.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:52:32 PM" class="hival">
-            90.0</span>
+          <span title="12:00:01 AM" class="hival">
+            59.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="07:29:11 AM" class="loval">
-            48.7</span>
+          <span title="12:00:10 AM" class="loval">
+            59.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:29:11 AM (Sunday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="07:16:02 PM">
-            49.9</span><br/>
-          <span title="02:16:06 PM">
-            36.3</span>
+          <span title="12:03:56 AM">
+            49.3</span><br/>
+          <span title="12:00:10 AM">
+            47.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:16:02 PM (Sunday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:09:59 AM">
-            74</span><br/>
-          <span title="02:12:50 PM">
-            16</span>
+          <span title="12:03:54 AM">
+            70</span><br/>
+          <span title="12:00:01 AM">
+            66</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:09:59 AM (Sunday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="11:34:03 PM">
-            29.943</span><br/>
-          <span title="02:56:02 PM">
-            29.833</span>
+          <span title="12:00:06 AM">
+            29.941</span><br/>
+          <span title="12:03:00 AM">
+            29.935</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:34:03 PM (Sunday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="02:35:30 PM">
-            16</span><br/>
-          186
+          <span title="12:00:01 AM">
+            0</span><br/>
+             N/A
         </td>
         <td class="data new_row hilo_week">
           <span title="02:35:30 PM (Sunday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          2</td>
+          0</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          3</td>
+          0</td>
         <td class="data new_row hilo_week">
           3</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          2<br/>
-          188
+          0<br/>
+             N/A
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:26:02 PM">
-            80.8</span><br/>
-          <span title="07:26:01 AM">
-            71.6</span>
+          <span title="12:00:01 AM">
+            75.7</span><br/>
+          <span title="12:00:01 AM">
+            75.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:26:02 PM (Sunday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="11:10:03 PM">
+          <span title="12:00:01 AM">
             38</span><br/>
-          <span title="04:12:02 PM">
-            31</span>
+          <span title="12:00:01 AM">
+            38</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:10:03 PM (Sunday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 9 hours, 12 minutes</td>
+      <td class="data">12 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 9 hours, 12 minutes</td>
+      <td class="data">12 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
