--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/14/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">90.0<br/>
-            <span class="timestamp">01:52:32 PM</span><br/>
-            48.7<br/>
-            <span class="timestamp">07:29:11 AM</span>
+          <td class="data new_row">59.1<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            59.0<br/>
+            <span class="timestamp">12:00:10 AM</span>
           </td>
           <td class="data new_row">90.0<br/>
             <span class="timestamp">01:52:32 PM (Sunday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">90.0<br/>
-            <span class="timestamp">01:52:32 PM</span>
+          <td class="data new_row">59.1<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">90.0<br/>
             <span class="timestamp">01:52:32 PM (Sunday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">48.7<br/>
-            <span class="timestamp">07:29:11 AM</span>
+          <td class="data new_row">59.0<br/>
+            <span class="timestamp">12:00:10 AM</span>
           </td>
           <td class="data new_row">48.7<br/>
             <span class="timestamp">07:29:11 AM (Sunday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">49.9<br/>
-            <span class="timestamp">07:16:02 PM</span><br/>
-            36.3<br/>
-            <span class="timestamp">02:16:06 PM</span>
+          <td class="data new_row">49.3<br/>
+            <span class="timestamp">12:03:56 AM</span><br/>
+            47.7<br/>
+            <span class="timestamp">12:00:10 AM</span>
           </td>
           <td class="data new_row">49.9<br/>
             <span class="timestamp">07:16:02 PM (Sunday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">74<br/>
-            <span class="timestamp">07:09:59 AM</span><br/>
-            16<br/>
-            <span class="timestamp">02:12:50 PM</span>
+          <td class="data new_row">70<br/>
+            <span class="timestamp">12:03:54 AM</span><br/>
+            66<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">74<br/>
             <span class="timestamp">07:09:59 AM (Sunday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.943<br/>
-            <span class="timestamp">11:34:03 PM</span><br/>
-            29.833<br/>
-            <span class="timestamp">02:56:02 PM</span>
+          <td class="data new_row">29.941<br/>
+            <span class="timestamp">12:00:06 AM</span><br/>
+            29.935<br/>
+            <span class="timestamp">12:03:00 AM</span>
           </td>
           <td class="data new_row">29.943<br/>
             <span class="timestamp">11:34:03 PM (Sunday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            16<br/>
-            186<br/>
-            <span class="timestamp">02:35:30 PM</span>
+            0<br/>
+               N/A<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             16<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            2</td>
+            0</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">3</td>
+          <td class="data new_row">0</td>
           <td class="data new_row">3</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            2<br/>
-            188
+            0<br/>
+               N/A
           </td>
           <td class="data new_row">
             2<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            80.8<br/>
-            <span class="timestamp">06:26:02 PM</span><br/>
-            71.6<br/>
-            <span class="timestamp">07:26:01 AM</span>
+            75.7<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            75.7<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             80.8<br/>
@@ -397,9 +397,9 @@
           <td class="units">%</td>
           <td class="data new_row">
             38<br/>
-            <span class="timestamp">11:10:03 PM</span><br/>
-            31<br/>
-            <span class="timestamp">04:12:02 PM</span>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            38<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             38<br/>
