--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 01:54:00 AM</p>
+    <p class="lastupdate">09/14/2020 01:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">55.5&#176;F</td>
+        <td class="data">55.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">55.5&#176;F</td>
+        <td class="data">55.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">55.5&#176;F</td>
+        <td class="data">55.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.3&#176;F</td>
+        <td class="data">46.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">74%</td>
+        <td class="data">72%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.934 inHg (0.001)</td>
+        <td class="data">29.934 inHg (-0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             59.1</span><br/>
-          <span title="01:50:12 AM">
-            55.5</span>
+          <span title="01:54:08 AM">
+            55.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:50:12 AM" class="loval">
-            55.5</span>
+          <span title="01:54:08 AM" class="loval">
+            55.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:29:11 AM (Sunday)" class="loval">
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.7</span><br/>
-          <span title="01:45:00 AM">
-            75.0</span>
+          <span title="01:55:00 AM">
+            74.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:26:02 PM (Sunday)">
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            38</span><br/>
+          <span title="01:59:00 AM">
+            39</span><br/>
           <span title="12:00:01 AM">
             38</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:10:03 PM (Sunday)">
-            38</span><br/>
+          <span title="01:59:00 AM (Monday)">
+            39</span><br/>
           <span title="04:12:02 PM (Sunday)">
             31</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 11 hours, 7 minutes</td>
+      <td class="data">12 days, 11 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 11 hours, 7 minutes</td>
+      <td class="data">12 days, 11 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
