--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 01:54:00 AM</p>
+    <p class="lastupdate">09/14/2020 01:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -86,8 +86,8 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">59.1<br/>
             <span class="timestamp">12:00:01 AM</span><br/>
-            55.5<br/>
-            <span class="timestamp">01:50:12 AM</span>
+            55.4<br/>
+            <span class="timestamp">01:54:08 AM</span>
           </td>
           <td class="data new_row">90.0<br/>
             <span class="timestamp">01:52:32 PM (Sunday)</span><br/>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">55.5<br/>
-            <span class="timestamp">01:50:12 AM</span>
+          <td class="data new_row">55.4<br/>
+            <span class="timestamp">01:54:08 AM</span>
           </td>
           <td class="data new_row">48.7<br/>
             <span class="timestamp">07:29:11 AM (Sunday)</span>
@@ -363,8 +363,8 @@
           <td class="data new_row">
             75.7<br/>
             <span class="timestamp">12:00:01 AM</span><br/>
-            75.0<br/>
-            <span class="timestamp">01:45:00 AM</span>
+            74.9<br/>
+            <span class="timestamp">01:55:00 AM</span>
           </td>
           <td class="data new_row">
             80.8<br/>
@@ -396,14 +396,14 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            38<br/>
-            <span class="timestamp">12:00:01 AM</span><br/>
+            39<br/>
+            <span class="timestamp">01:59:00 AM</span><br/>
             38<br/>
             <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
-            38<br/>
-            <span class="timestamp">11:10:03 PM (Sunday)</span><br/>
+            39<br/>
+            <span class="timestamp">01:59:00 AM (Monday)</span><br/>
             31<br/>
             <span class="timestamp">04:12:02 PM (Sunday)</span>
           </td>
