--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 03:59:00 AM</p>
+    <p class="lastupdate">09/14/2020 04:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">51.9&#176;F</td>
+        <td class="data">51.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">51.9&#176;F</td>
+        <td class="data">51.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">51.9&#176;F</td>
+        <td class="data">51.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.3&#176;F</td>
+        <td class="data">46.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">81%</td>
+        <td class="data">82%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.942 inHg (0.007)</td>
+        <td class="data">29.941 inHg (0.008)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             59.1</span><br/>
-          <span title="03:57:39 AM">
-            51.9</span>
+          <span title="04:03:37 AM">
+            51.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:57:39 AM" class="loval">
-            51.9</span>
+          <span title="04:03:37 AM" class="loval">
+            51.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:29:11 AM (Sunday)" class="loval">
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="03:54:01 AM">
-            29.943</span><br/>
+          <span title="04:00:01 AM">
+            29.944</span><br/>
           <span title="01:32:00 AM">
             29.926</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:34:03 PM (Sunday)">
-            29.943</span><br/>
+          <span title="04:00:01 AM (Monday)">
+            29.944</span><br/>
           <span title="02:56:02 PM (Sunday)">
             29.833</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 13 hours, 12 minutes</td>
+      <td class="data">12 days, 13 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 13 hours, 12 minutes</td>
+      <td class="data">12 days, 13 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
