--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 05:44:00 AM</p>
+    <p class="lastupdate">09/14/2020 05:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">51.0&#176;F</td>
+        <td class="data">50.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">51.0&#176;F</td>
+        <td class="data">50.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">51.0&#176;F</td>
+        <td class="data">50.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.2&#176;F</td>
+        <td class="data">47.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">90%</td>
+        <td class="data">89%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.939 inHg (0.006)</td>
+        <td class="data">29.938 inHg (0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.7&#176;F</td>
+        <td class="data">73.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          331
+          332
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          188
+          189
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.7</span><br/>
-          <span title="05:32:01 AM">
-            73.7</span>
+          <span title="05:46:01 AM">
+            73.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:26:02 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 14 hours, 57 minutes</td>
+      <td class="data">12 days, 15 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 14 hours, 57 minutes</td>
+      <td class="data">12 days, 15 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
